--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Backend for realtime chess.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node src/server/server"
   },
   "author": "",
-  "license": "BSD 2-Clause License",
+  "license": "BSD-2-Clause",
   "dependencies": {
+    "amqplib": "^0.5.2",
     "chess.js": "^0.10.2",
     "express": "^4.16.2",
     "uuid": "^3.2.1",
